# codegen_actixweb_demo

./: .gitignore  LICENSE  README.md  backend.openapi.yaml  docker-compose.yaml
backend/: Cargo.toml
backend/src/: db.rs  errors.rs  main.rs  models.rs
backend/src/models/: book.rs  user.rs
fab/: package-lock.json  package.json
sql/: prepare.sql  seed.sql
sql/table/: books.sql  users.sql
