[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
config = "0.13.3"
deadpool-postgres = { version = "0.10.3", features = ["serde"] }
derive_more = "0.99.17"
dotenv = "0.15.0"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = { version = "0.7.7", features = ["with-uuid-1"] }
uuid = { version = "1.2.2", features = ["v4", "serde"] }
